Fix rail avatar overlapping

--- a/extensions/wikia/CommunityPage/styles/entrypoint/EntryPoint.scss
+++ b/extensions/wikia/CommunityPage/styles/entrypoint/EntryPoint.scss
@@ -17,6 +17,7 @@
 		position: absolute;
 		top: -16px;
 		width: 100%;
+		z-index: 0;
 	}
 
 	.wds-avatar-stack {
